@@ -15,17 +15,20 @@
 package com.amazon.sqs.javamessaging;
 
 
-import com.amazon.sqs.javamessaging.AmazonSQSMessagingClientWrapper;
-import com.amazon.sqs.javamessaging.SQSConnection;
-import com.amazon.sqs.javamessaging.SQSMessageProducer;
-import com.amazon.sqs.javamessaging.SQSQueueDestination;
-import com.amazon.sqs.javamessaging.SQSSession;
 import com.amazon.sqs.javamessaging.acknowledge.Acknowledger;
 import com.amazon.sqs.javamessaging.message.SQSBytesMessage;
 import com.amazon.sqs.javamessaging.message.SQSMessage;
 import com.amazon.sqs.javamessaging.message.SQSObjectMessage;
 import com.amazon.sqs.javamessaging.message.SQSTextMessage;
-
+import jakarta.jms.Destination;
+import jakarta.jms.IllegalStateException;
+import jakarta.jms.InvalidDestinationException;
+import jakarta.jms.JMSException;
+import jakarta.jms.Queue;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
+import org.mockito.ArgumentMatcher;
 import software.amazon.awssdk.services.sqs.model.Message;
 import software.amazon.awssdk.services.sqs.model.MessageAttributeValue;
 import software.amazon.awssdk.services.sqs.model.MessageSystemAttributeName;
@@ -33,32 +36,21 @@ import software.amazon.awssdk.services.sqs.model.SendMessageRequest;
 import software.amazon.awssdk.services.sqs.model.SendMessageResponse;
 import software.amazon.awssdk.utils.BinaryUtils;
 
-import javax.jms.InvalidDestinationException;
-import javax.jms.JMSException;
-import javax.jms.IllegalStateException;
-import javax.jms.Queue;
-import javax.jms.Destination;
-
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.ObjectOutputStream;
+import java.io.Serializable;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.ArgumentCaptor;
-import org.mockito.ArgumentMatcher;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.argThat;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.argThat;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -80,16 +72,12 @@ public class SQSMessageProducerTest {
     private SQSMessageProducer producer;
     private SQSQueueDestination destination;
     private SQSSession sqsSession;
-    private SQSConnection sqsConnection;
     private AmazonSQSMessagingClientWrapper amazonSQSClient;
     private Acknowledger acknowledger;
 
-    @Before
+    @BeforeEach
     public void setup() throws JMSException {
-
         amazonSQSClient = mock(AmazonSQSMessagingClientWrapper.class);
-        sqsConnection = mock(SQSConnection.class);
-
         acknowledger = mock(Acknowledger.class);
 
         sqsSession = mock(SQSSession.class);
@@ -102,12 +90,9 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testCheckIfDestinationAlreadySet() throws JMSException {
-
-        try {
-            producer.checkIfDestinationAlreadySet();
-        } catch (UnsupportedOperationException uoe) {
-            assertEquals("MessageProducer already specified a destination at creation time.", uoe.getMessage());
-        }
+        assertThatThrownBy(() -> producer.checkIfDestinationAlreadySet())
+                .isInstanceOf(UnsupportedOperationException.class)
+                .hasMessage("MessageProducer already specified a destination at creation time.");
 
         producer = spy(new SQSMessageProducer(amazonSQSClient, sqsSession, null));
         producer.checkIfDestinationAlreadySet();
@@ -118,16 +103,13 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testCheckClosed() throws JMSException {
-
         /*
          * Check exception is thrown when producer is closed
          */
         producer.isClosed().set(true);
-        try {
-            producer.checkClosed();
-        } catch (IllegalStateException ise) {
-            assertEquals("The producer is closed.", ise.getMessage());
-        }
+        assertThatThrownBy(() -> producer.checkClosed())
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessage("The producer is closed.");
 
         /*
          * Check no op when producer is closed
@@ -141,14 +123,13 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testPropertyToMessageAttributeWithEmpty() throws JMSException {
-
         /*
          * Test Empty text message default attribute
          */
         SQSMessage sqsText = new SQSTextMessage();
         Map<String, MessageAttributeValue> messageAttributeText = producer.propertyToMessageAttribute(sqsText);
 
-        assertEquals(0, messageAttributeText.size());
+        assertThat(messageAttributeText).isEmpty();
 
         /*
          * Test Empty object message default attribute
@@ -156,20 +137,15 @@ public class SQSMessageProducerTest {
         SQSMessage sqsObject = new SQSObjectMessage();
         Map<String, MessageAttributeValue> messageAttributeObject = producer.propertyToMessageAttribute(sqsObject);
 
-        assertEquals(0, messageAttributeObject.size());
+        assertThat(messageAttributeObject).isEmpty();
 
         /*
          * Test Empty byte message default attribute
          */
-        MessageAttributeValue messageAttributeValueByte = MessageAttributeValue.builder()
-        		.dataType("String")
-        		.stringValue("byte")
-        		.build();
-
         SQSMessage sqsByte = new SQSBytesMessage();
         Map<String, MessageAttributeValue> messageAttributeByte = producer.propertyToMessageAttribute(sqsByte);
 
-        assertEquals(0, messageAttributeObject.size());
+        assertThat(messageAttributeByte).isEmpty();
     }
 
     /**
@@ -201,64 +177,59 @@ public class SQSMessageProducerTest {
         String objectProperty = "ObjectProperty";
 
         sqsText.setBooleanProperty(booleanProperty, true);
-        sqsText.setByteProperty(byteProperty, (byte)1);
+        sqsText.setByteProperty(byteProperty, (byte) 1);
         sqsText.setShortProperty(shortProperty, (short) 2);
         sqsText.setIntProperty(intProperty, 3);
         sqsText.setLongProperty(longProperty, 4L);
-        sqsText.setFloatProperty(floatProperty, (float)5.0);
+        sqsText.setFloatProperty(floatProperty, (float) 5.0);
         sqsText.setDoubleProperty(doubleProperty, 6.0);
         sqsText.setStringProperty(stringProperty, "seven");
-        sqsText.setObjectProperty(objectProperty, Integer.valueOf(8));
+        sqsText.setObjectProperty(objectProperty, 8);
 
         MessageAttributeValue messageAttributeValueBoolean = MessageAttributeValue.builder()
-	        .dataType("Number.Boolean")
-	        .stringValue("1")
-	        .build();
+                .dataType("Number.Boolean")
+                .stringValue("1")
+                .build();
 
         MessageAttributeValue messageAttributeValueByte = MessageAttributeValue.builder()
-	        .dataType("Number.byte")
-	        .stringValue("1")
-	        .build();
+                .dataType("Number.byte")
+                .stringValue("1")
+                .build();
 
         MessageAttributeValue messageAttributeValueShort = MessageAttributeValue.builder()
-	        .dataType("Number.short")
-	        .stringValue("2")
-	        .build();
+                .dataType("Number.short")
+                .stringValue("2")
+                .build();
 
         MessageAttributeValue messageAttributeValueInt = MessageAttributeValue.builder()
-	        .dataType("Number.int")
-	        .stringValue("3")
-	        .build();
+                .dataType("Number.int")
+                .stringValue("3")
+                .build();
 
         MessageAttributeValue messageAttributeValueLong = MessageAttributeValue.builder()
-        		.dataType("Number.long")
-        		.stringValue("4")
-        		.build();
+                .dataType("Number.long")
+                .stringValue("4")
+                .build();
 
         MessageAttributeValue messageAttributeValueFloat = MessageAttributeValue.builder()
-        		.dataType("Number.float")
-        		.stringValue("5.0")
-        		.build();
+                .dataType("Number.float")
+                .stringValue("5.0")
+                .build();
 
         MessageAttributeValue messageAttributeValueDouble = MessageAttributeValue.builder()
-        		.dataType("Number.double")
-        		.stringValue("6.0")
-        		.build();
+                .dataType("Number.double")
+                .stringValue("6.0")
+                .build();
 
         MessageAttributeValue messageAttributeValueString = MessageAttributeValue.builder()
-        		.dataType("String")
-        		.stringValue("seven")
-        		.build();
+                .dataType("String")
+                .stringValue("seven")
+                .build();
 
         MessageAttributeValue messageAttributeValueObject = MessageAttributeValue.builder()
-        		.dataType("Number.int")
-        		.stringValue("8")
-        		.build();
-
-        MessageAttributeValue messageAttributeValueJMSSQSMessageType = MessageAttributeValue.builder()
-        		.dataType("String")
-	        	.stringValue("text")
-	        	.build();
+                .dataType("Number.int")
+                .stringValue("8")
+                .build();
 
         /*
          * Convert property to sqs message attribute
@@ -268,15 +239,15 @@ public class SQSMessageProducerTest {
         /*
          * Verify results
          */
-        assertEquals(messageAttributeValueBoolean, messageAttribute.get(booleanProperty));
-        assertEquals(messageAttributeValueByte, messageAttribute.get(byteProperty));
-        assertEquals(messageAttributeValueShort, messageAttribute.get(shortProperty));
-        assertEquals(messageAttributeValueInt, messageAttribute.get(intProperty));
-        assertEquals(messageAttributeValueLong, messageAttribute.get(longProperty));
-        assertEquals(messageAttributeValueFloat, messageAttribute.get(floatProperty));
-        assertEquals(messageAttributeValueDouble, messageAttribute.get(doubleProperty));
-        assertEquals(messageAttributeValueString, messageAttribute.get(stringProperty));
-        assertEquals(messageAttributeValueObject, messageAttribute.get(objectProperty));
+        assertThat(messageAttributeValueBoolean).isEqualTo(messageAttribute.get(booleanProperty));
+        assertThat(messageAttributeValueByte).isEqualTo(messageAttribute.get(byteProperty));
+        assertThat(messageAttributeValueShort).isEqualTo(messageAttribute.get(shortProperty));
+        assertThat(messageAttributeValueInt).isEqualTo(messageAttribute.get(intProperty));
+        assertThat(messageAttributeValueLong).isEqualTo(messageAttribute.get(longProperty));
+        assertThat(messageAttributeValueFloat).isEqualTo(messageAttribute.get(floatProperty));
+        assertThat(messageAttributeValueDouble).isEqualTo(messageAttribute.get(doubleProperty));
+        assertThat(messageAttributeValueString).isEqualTo(messageAttribute.get(stringProperty));
+        assertThat(messageAttributeValueObject).isEqualTo(messageAttribute.get(objectProperty));
 
     }
 
@@ -284,33 +255,21 @@ public class SQSMessageProducerTest {
      * Test sendInternal input of Non SQS message
      */
     @Test
-    public void testSendInternalNonSQSMessage() throws JMSException {
+    public void testSendInternalNonSQSMessage() {
+        jakarta.jms.Message msg = mock(jakarta.jms.Message.class);
 
-        javax.jms.Message msg = mock(javax.jms.Message.class);
-
-        try {
-            producer.sendInternal(destination, msg);
-            fail();
-        } catch (JMSException jmse) {
-            // expected
-        }
+        assertThatThrownBy(() -> producer.sendInternal(destination, msg)).isInstanceOf(JMSException.class);
     }
 
     /**
      * Test sendInternal input of Non SQS message
      */
     @Test
-    public void testSendInternalAlreadyClosed() throws JMSException {
-
+    public void testSendInternalAlreadyClosed() {
         producer.isClosed().set(true);
         SQSMessage msg = mock(SQSMessage.class);
 
-        try {
-            producer.sendInternal(destination, msg);
-            fail();
-        } catch (JMSException jmse) {
-            // expected
-        }
+        assertThatThrownBy(() -> producer.sendInternal(destination, msg)).isInstanceOf(JMSException.class);
     }
 
     /**
@@ -318,15 +277,9 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendInternalNoMessageBody() throws JMSException {
-
         SQSMessage msg = mock(SQSMessage.class);
 
-        try {
-            producer.sendInternal(destination, msg);
-            fail();
-        } catch (JMSException jmse) {
-            //expected
-        }
+        assertThatThrownBy(() -> producer.sendInternal(destination, msg)).isInstanceOf(JMSException.class);
 
         verify(msg).setJMSDestination(destination);
     }
@@ -336,7 +289,6 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendInternalSQSTextMessage() throws JMSException {
-
         String messageBody1 = "MyText1";
         String messageBody2 = "MyText2";
         SQSTextMessage msg = spy(new SQSTextMessage(messageBody1));
@@ -350,13 +302,14 @@ public class SQSMessageProducerTest {
         producer.sendInternal(destination, msg);
 
         /*
-         * Re send the message
+         * Resend the message
          */
         msg.setText(messageBody2);
         producer.sendInternal(destination, msg);
 
         List<String> messagesBody = Arrays.asList(messageBody1, messageBody2);
-        verify(amazonSQSClient, times(2)).sendMessage(argThat(new sendMessageRequestMatcher(QUEUE_URL, messagesBody, messageAttributes)));
+        verify(amazonSQSClient, times(2)).sendMessage(argThat(
+                new SendMessageRequestMatcher(QUEUE_URL, messagesBody, messageAttributes)));
         verify(msg, times(2)).setJMSDestination(destination);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_1);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_2);
@@ -369,24 +322,23 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendInternalSQSTextMessageFromReceivedMessage() throws JMSException {
-
         /*
          * Set up non JMS sqs message
          */
-        Map<String,MessageAttributeValue> mapMessageAttributes = new HashMap<String, MessageAttributeValue>();
+        Map<String, MessageAttributeValue> mapMessageAttributes = new HashMap<>();
         MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
-	        .stringValue(SQSMessage.TEXT_MESSAGE_TYPE)
-	        .dataType(SQSMessagingClientConstants.STRING)
-	        .build();
+                .stringValue(SQSMessage.TEXT_MESSAGE_TYPE)
+                .dataType(SQSMessagingClientConstants.STRING)
+                .build();
         mapMessageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
 
         Map<MessageSystemAttributeName, String> mapAttributes = new HashMap<>();
         mapAttributes.put(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.APPROXIMATE_RECEIVE_COUNT), "1");
 
         Message message = Message.builder().messageAttributes(mapMessageAttributes)
-                            .attributes(mapAttributes)
-                            .body("MessageBody")
-                            .build();
+                .attributes(mapAttributes)
+                .body("MessageBody")
+                .build();
 
         SQSTextMessage msg = spy(new SQSTextMessage(acknowledger, QUEUE_URL, message));
 
@@ -395,8 +347,9 @@ public class SQSMessageProducerTest {
 
         producer.sendInternal(destination, msg);
 
-        List<String> messagesBody = Arrays.asList("MessageBody");
-        verify(amazonSQSClient).sendMessage(argThat(new sendMessageRequestMatcher(QUEUE_URL, messagesBody, mapMessageAttributes)));
+        List<String> messagesBody = List.of("MessageBody");
+        verify(amazonSQSClient).sendMessage(argThat(
+                new SendMessageRequestMatcher(QUEUE_URL, messagesBody, mapMessageAttributes)));
         verify(msg).setJMSDestination(destination);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_1);
         verify(msg).setSQSMessageId(MESSAGE_ID_1);
@@ -407,36 +360,28 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendInternalSQSObjectMessage() throws JMSException {
-
-        HashSet<String> set1 = new HashSet<String>();
-        set1.add("data1");
-        HashSet<String> set2 = new HashSet<String>();
-        set2.add("data2");
-
-        SQSObjectMessage msg = spy(new SQSObjectMessage(set1));
+        SQSObjectMessage msg = spy(new SQSObjectMessage((Serializable) Set.of("data1")));
         String megBody1 = msg.getMessageBody();
 
-        Map<String, MessageAttributeValue> messageAttributes = createMessageAttribute("object");
-
         when(amazonSQSClient.sendMessage(any(SendMessageRequest.class)))
-        .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_1).build())
-        .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_2).build());
+                .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_1).build())
+                .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_2).build());
 
         producer.sendInternal(destination, msg);
 
         /*
-         * Re send the message
+         * Resend the message
          */
         msg.clearBody();
-        msg.setObject(set2);
+        msg.setObject((Serializable) Set.of("data2"));
         String megBody2 = msg.getMessageBody();
         producer.sendInternal(destination, msg);
-        
+
         ArgumentCaptor<SendMessageRequest> argumentCaptor = ArgumentCaptor.forClass(SendMessageRequest.class);
         verify(amazonSQSClient, times(2)).sendMessage(argumentCaptor.capture());
-        
-        assertEquals(megBody1, argumentCaptor.getAllValues().get(0).messageBody());
-        assertEquals(megBody2, argumentCaptor.getAllValues().get(1).messageBody());
+
+        assertThat(megBody1).isEqualTo(argumentCaptor.getAllValues().get(0).messageBody());
+        assertThat(megBody2).isEqualTo(argumentCaptor.getAllValues().get(1).messageBody());
         verify(msg, times(2)).setJMSDestination(destination);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_1);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_2);
@@ -449,16 +394,15 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendInternalSQSObjectMessageFromReceivedMessage() throws JMSException, IOException {
-
         /*
          * Set up non JMS sqs message
          */
-        Map<String,MessageAttributeValue> mapMessageAttributes = new HashMap<String, MessageAttributeValue>();
+        Map<String, MessageAttributeValue> mapMessageAttributes = new HashMap<>();
 
         MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
-        	.stringValue(SQSMessage.OBJECT_MESSAGE_TYPE)
-        	.dataType(SQSMessagingClientConstants.STRING)
-        	.build();
+                .stringValue(SQSMessage.OBJECT_MESSAGE_TYPE)
+                .dataType(SQSMessagingClientConstants.STRING)
+                .build();
         mapMessageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
 
         Map<MessageSystemAttributeName, String> mapAttributes = new HashMap<>();
@@ -473,22 +417,22 @@ public class SQSMessageProducerTest {
 
         String messageBody = BinaryUtils.toBase64(array.toByteArray());
         Message message = Message.builder()
-                        .messageAttributes(mapMessageAttributes)
-                        .attributes(mapAttributes)
-                        .body(messageBody)
-                        .build();
+                .messageAttributes(mapMessageAttributes)
+                .attributes(mapAttributes)
+                .body(messageBody)
+                .build();
 
         SQSObjectMessage msg = spy(new SQSObjectMessage(acknowledger, QUEUE_URL, message));
 
         Map<String, MessageAttributeValue> messageAttributes = createMessageAttribute("object");
 
         when(amazonSQSClient.sendMessage(any(SendMessageRequest.class)))
-        .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_1).build())
-        .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_2).build());
+                .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_1).build())
+                .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_2).build());
 
         producer.sendInternal(destination, msg);
 
-        verify(amazonSQSClient).sendMessage(argThat(new sendMessageRequestMatcher(QUEUE_URL, Arrays.asList(messageBody),
+        verify(amazonSQSClient).sendMessage(argThat(new SendMessageRequestMatcher(QUEUE_URL, List.of(messageBody),
                 messageAttributes)));
         verify(msg).setJMSDestination(destination);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_1);
@@ -500,14 +444,12 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendInternalSQSByteMessage() throws JMSException {
-
         SQSBytesMessage msg = spy(new SQSBytesMessage());
-        msg.writeByte((byte)0);
+        msg.writeByte((byte) 0);
         msg.reset();
 
         Map<String, MessageAttributeValue> messageAttributes = createMessageAttribute("byte");
 
-        String messageId = "MessageId";
         when(amazonSQSClient.sendMessage(any(SendMessageRequest.class)))
                 .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_1).build())
                 .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_2).build());
@@ -515,15 +457,15 @@ public class SQSMessageProducerTest {
         producer.sendInternal(destination, msg);
 
         /*
-         * Re send the message
+         * Resend the message
          */
         msg.clearBody();
         msg.writeInt(42);
         producer.sendInternal(destination, msg);
 
         List<String> messagesBody = Arrays.asList("AA==", "AAAAKg==");
-        verify(amazonSQSClient, times(2)).sendMessage(argThat(new sendMessageRequestMatcher(QUEUE_URL, messagesBody,
-                                                                                            messageAttributes)));
+        verify(amazonSQSClient, times(2)).sendMessage(argThat(
+                new SendMessageRequestMatcher(QUEUE_URL, messagesBody, messageAttributes)));
 
         verify(msg, times(2)).setJMSDestination(destination);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_1);
@@ -536,28 +478,27 @@ public class SQSMessageProducerTest {
      * Test sendInternal input with SQSByteMessage
      */
     @Test
-    public void testSendInternalSQSByteMessageFromReceivedMessage() throws JMSException, IOException {
-        
+    public void testSendInternalSQSByteMessageFromReceivedMessage() throws JMSException {
         /*
          * Set up non JMS sqs message
          */
-        Map<String,MessageAttributeValue> mapMessageAttributes = new HashMap<String, MessageAttributeValue>();
+        Map<String, MessageAttributeValue> mapMessageAttributes = new HashMap<>();
         MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
-	        .stringValue(SQSMessage.BYTE_MESSAGE_TYPE)
-	        .dataType(SQSMessagingClientConstants.STRING)
-	        .build();
+                .stringValue(SQSMessage.BYTE_MESSAGE_TYPE)
+                .dataType(SQSMessagingClientConstants.STRING)
+                .build();
         mapMessageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
 
         Map<MessageSystemAttributeName, String> mapAttributes = new HashMap<>();
         mapAttributes.put(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.APPROXIMATE_RECEIVE_COUNT), "1");
 
-        byte[] byteArray = new byte[] { 1, 0, 'a', 65 };
+        byte[] byteArray = new byte[]{1, 0, 'a', 65};
         String messageBody = BinaryUtils.toBase64(byteArray);
         Message message = Message.builder()
-                        .messageAttributes(mapMessageAttributes)
-                        .attributes(mapAttributes)
-                        .body(messageBody)
-                        .build();
+                .messageAttributes(mapMessageAttributes)
+                .attributes(mapAttributes)
+                .body(messageBody)
+                .build();
 
         SQSObjectMessage msg = spy(new SQSObjectMessage(acknowledger, QUEUE_URL, message));
 
@@ -569,8 +510,8 @@ public class SQSMessageProducerTest {
 
         producer.sendInternal(destination, msg);
 
-        verify(amazonSQSClient).sendMessage(argThat(new sendMessageRequestMatcher(QUEUE_URL, Arrays.asList(messageBody),
-                messageAttributes)));
+        verify(amazonSQSClient).sendMessage(argThat(new SendMessageRequestMatcher(
+                QUEUE_URL, List.of(messageBody), messageAttributes)));
         verify(msg).setJMSDestination(destination);
         verify(msg).setJMSMessageID("ID:" + MESSAGE_ID_1);
         verify(msg).setSQSMessageId(MESSAGE_ID_1);
@@ -581,7 +522,7 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testGetQueue() throws JMSException {
-        assertEquals(destination, producer.getQueue());
+        assertThat(destination).isEqualTo(producer.getQueue());
     }
 
     /**
@@ -589,32 +530,15 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendNonSQSDestination() throws JMSException {
-
         Queue queue = mock(Queue.class);
-
         SQSTextMessage msg = spy(new SQSTextMessage("MyText"));
 
-        try {
-            producer.send(queue, msg);
-            fail();
-        } catch (InvalidDestinationException ide) {
-            // expected
-        }
+        assertThatThrownBy(() -> producer.send(queue, msg)).isInstanceOf(InvalidDestinationException.class);
 
         Destination destination = mock(Destination.class);
-        try {
-            producer.send(destination, msg);
-            fail();
-        } catch (InvalidDestinationException ide) {
-            // expected
-        }
+        assertThatThrownBy(() -> producer.send(destination, msg)).isInstanceOf(InvalidDestinationException.class);
 
-        try {
-            producer.send(null, msg);
-            fail();
-        } catch (InvalidDestinationException ide) {
-            // expected
-        }
+        assertThatThrownBy(() -> producer.send(null, msg)).isInstanceOf(InvalidDestinationException.class);
     }
 
     /**
@@ -622,15 +546,9 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendDestinationAlreadySpecified() throws JMSException {
-
         SQSTextMessage msg = spy(new SQSTextMessage("MyText"));
 
-        try {
-            producer.send(destination, msg);
-            fail();
-        } catch (UnsupportedOperationException ide) {
-            // expected
-        }
+        assertThatThrownBy(() -> producer.send(destination, msg)).isInstanceOf(UnsupportedOperationException.class);
 
         verify(producer).checkIfDestinationAlreadySet();
     }
@@ -640,7 +558,6 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendWithDestination() throws JMSException {
-
         SQSTextMessage msg = spy(new SQSTextMessage("MyText"));
         producer = spy(new SQSMessageProducer(amazonSQSClient, sqsSession, null));
 
@@ -658,7 +575,6 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendDropUnsupportedFeatures() throws JMSException {
-
         int deliveryMode = 1;
         int priority = 1;
         long timeToLive = 1;
@@ -681,7 +597,6 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testSendWithoutDestination() throws JMSException {
-
         SQSTextMessage msg = spy(new SQSTextMessage("MyText"));
 
         doNothing()
@@ -696,7 +611,6 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testCloseAlreadyClosed() throws JMSException {
-
         producer.isClosed().set(true);
 
         producer.close();
@@ -709,7 +623,6 @@ public class SQSMessageProducerTest {
      */
     @Test
     public void testClose() throws JMSException {
-
         producer.close();
 
         verify(sqsSession).removeProducer(producer);
@@ -717,83 +630,52 @@ public class SQSMessageProducerTest {
 
     @Test
     public void testSetDeliveryDelay() throws JMSException {
-        assertEquals(0, producer.getDeliveryDelay());
-        
+        assertThat(producer.getDeliveryDelay()).isZero();
+
         producer.setDeliveryDelay(2000);
-        
-        assertEquals(2000, producer.getDeliveryDelay());
-        
+
+        assertThat(producer.getDeliveryDelay()).isEqualTo(2000);
+
         ArgumentCaptor<SendMessageRequest> requestCaptor = ArgumentCaptor.forClass(SendMessageRequest.class);
         when(amazonSQSClient.sendMessage(requestCaptor.capture()))
-            .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_1).build());
+                .thenReturn(SendMessageResponse.builder().messageId(MESSAGE_ID_1).build());
 
         SQSTextMessage msg = new SQSTextMessage("Sorry I'm late!");
         producer.send(msg);
-        
-        assertEquals(2, requestCaptor.getValue().delaySeconds().intValue());
+
+        assertThat(requestCaptor.getValue().delaySeconds().intValue()).isEqualTo(2);
     }
-    
-    
+
+
     @Test
-    public void testSetDeliveryDelayInvalidDelays() throws JMSException {
-        try {
-            producer.setDeliveryDelay(-1);
-            fail();
-        } catch (IllegalArgumentException ide) {
-            // expected
-        }
-        
-        try {
-            producer.setDeliveryDelay(TimeUnit.MILLISECONDS.convert(1, TimeUnit.DAYS));
-            fail();
-        } catch (IllegalArgumentException ide) {
-            // expected
-        }
-        
-        try {
-            producer.setDeliveryDelay(20);
-            fail();
-        } catch (IllegalArgumentException ide) {
-            // expected
-        }
+    public void testSetDeliveryDelayInvalidDelays() {
+        assertThatThrownBy(() -> producer.setDeliveryDelay(-1)).isInstanceOf(IllegalArgumentException.class);
+
+        assertThatThrownBy(() -> producer.setDeliveryDelay(TimeUnit.MILLISECONDS.convert(1, TimeUnit.DAYS)))
+                .isInstanceOf(IllegalArgumentException.class);
+
+        assertThatThrownBy(() -> producer.setDeliveryDelay(20)).isInstanceOf(IllegalArgumentException.class);
     }
-    
-    
+
+
     private Map<String, MessageAttributeValue> createMessageAttribute(String type) {
         MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
-	        .dataType("String")
-	        .stringValue(type)
-	        .build();
+                .dataType("String")
+                .stringValue(type)
+                .build();
 
-        Map<String, MessageAttributeValue> messageAttributes = new HashMap<String, MessageAttributeValue>();
-        messageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
-        return messageAttributes;
+        return Map.of(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
     }
 
-    private class sendMessageRequestMatcher extends ArgumentMatcher<SendMessageRequest> {
-
-        private String queueUrl;
-        private List<String> messagesBody;
-        private Map<String, MessageAttributeValue> messageAttributes;
-
-        private sendMessageRequestMatcher(String queueUrl, List<String> messagesBody,
-                                          Map<String, MessageAttributeValue> messageAttributes) {
-            this.queueUrl = queueUrl;
-            this.messagesBody = messagesBody;
-            this.messageAttributes = messageAttributes;
-        }
+    private record SendMessageRequestMatcher(String queueUrl, List<String> messagesBody,
+                                             Map<String, MessageAttributeValue> messageAttributes)
+            implements ArgumentMatcher<SendMessageRequest> {
 
         @Override
-        public boolean matches(Object argument) {
-
-            if (!(argument instanceof SendMessageRequest)) {
-                return false;
-            }
-
-            SendMessageRequest reqeust = (SendMessageRequest)argument;
-            assertEquals(queueUrl, reqeust.queueUrl());
-            assertTrue(messagesBody.contains(reqeust.messageBody()));
-            assertEquals(messageAttributes , reqeust.messageAttributes());
+        public boolean matches(SendMessageRequest request) {
+            assertThat(queueUrl).isEqualTo(request.queueUrl());
+            assertThat(messagesBody).contains(request.messageBody());
+            assertThat(messageAttributes).isEqualTo(request.messageAttributes());
             return true;
         }
     }
